--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,5 +1,5 @@
-.home-hero-header{
-    background: url("../../images/home-bg.jpg");
+.home-hero-header {
+    background: url(../../images/home-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 250px;
@@ -7,18 +7,20 @@
     position: relative;
     margin-bottom: 40px;
 }
-.home-hero-header-layout{
+
+.home-hero-header-layout {
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
     z-index: 2;
+    top: 0;
+    right: 0;
     width: 100%;
     height: 100%;
-    right: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.2);
 }
+
 .home-title {
     font-size: 40px;
     background-color: var(--main-color);
@@ -34,9 +36,9 @@
     font-size: 30px;
     font-weight: bold;
     color: var(--dark-color);
-    border-bottom: 2px solid var(--dark-color);
     width: max-content;
     margin-bottom: 20px;
+    border-bottom: 2px solid var(--dark-color);
 }
 
 .home-container {
@@ -44,7 +46,6 @@
     display: flex;
     align-items: flex-start;
 }
-
 
 .home-see-posts-link {
     padding: 0 30px;
@@ -64,6 +65,7 @@
     text-align: center;
     border-radius: 5px;
 }
+
 /* Media Queries */
 @media (max-width: 990px) {
     .home-container {
